<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/button_fragment_margin"
    android:orientation="vertical">


    <Button
        android:id="@+id/stopNowButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_stop_now" />

    <Button
        android:id="@+id/stopAfterCurrentTrackButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_stop_after_current_track" />

    <Button
        android:id="@+id/stopInThreeMinutesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_stop_in_three_minutes" />

</LinearLayout>