<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/functions_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="4dp"
    android:layout_marginVertical="18dp"
    android:background="@drawable/functions_menu"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageButton
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/function_button_margin"
        android:padding="@dimen/function_button_padding"
        android:src="@drawable/ic_search"
        android:contentDescription="@string/search_button_content_description" />

    <ImageButton
        android:visibility="gone"
        android:id="@+id/refreshButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/function_button_margin"
        android:padding="@dimen/function_button_padding"
        android:src="@drawable/ic_refresh"
        android:contentDescription="@string/refresh_button_content_description" />

    <ImageButton
        android:id="@+id/configButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/function_button_margin"
        android:padding="@dimen/function_button_padding"
        android:src="@drawable/ic_settings"
        android:contentDescription="@string/settings_button_content_description" />

    <ImageButton
        android:visibility="gone"
        android:id="@+id/aboutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/function_button_margin"
        android:padding="@dimen/function_button_padding"
        android:src="@drawable/ic_info"
        android:contentDescription="@string/about_button_content_description" />

</LinearLayout>
