<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:paddingHorizontal="@dimen/dialog_layout_padding_horizontal"
    android:layout_height="match_parent">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/input_text_padding_top">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addPlaylistNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:hint="@string/button_add_playlist" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/playlistAlreadyExistsTextView"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_playlist_already_exists_error"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/createPlaylistButton"
        android:text="@string/create_playlist_button_text">

    </Button>
</LinearLayout>