<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/button_fragment_margin"
    android:gravity="center"
    android:background="@color/default_dialog_background"
    android:orientation="vertical">

    <Button
        android:id="@+id/loadPlaylistButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dialog_option_button_margin_horizontal"
        android:layout_marginVertical="@dimen/dialog_option_button_margin_vertical"
        android:text="@string/button_playlist_options_load" />

    <Button
        android:id="@+id/createNewPlaylistButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dialog_option_button_margin_horizontal"
        android:layout_marginVertical="@dimen/dialog_option_button_margin_vertical"
        android:text="@string/button_playlist_options_new" />

    <Button
        android:id="@+id/removePlaylistButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dialog_option_button_margin_horizontal"
        android:layout_marginVertical="@dimen/dialog_option_button_margin_vertical"
        android:text="@string/button_playlist_options_remove" />

</LinearLayout>