<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchInputLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/searchResultsRecyclerView"
        android:paddingTop="@dimen/search_edit_text_padding_top">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/trackSearchEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textImeMultiLine"
            android:maxLines="1"
            android:maxLength="@integer/search_input_max_length"
            android:imeOptions="actionDone"
            android:hint="@string/search_edit_text_label" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchResultsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="@dimen/playlist_list_view_horizontal_margin"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="18dp"
        android:fadeScrollbars="true"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@+id/searchInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/searchButtonsLayout"
        />

    <LinearLayout
        android:id="@+id/searchButtonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/addSelectedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_search_add_selected" />

        <Button
            android:id="@+id/addAllButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_search_add_all" />
        <Button
            android:id="@+id/playSelectedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_search_play_selected" />

        <Button
            android:id="@+id/playNextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_search_play_next" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>